--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.1.5",
+    "@material-ui/core": "^4.6.1",
     "babel-jest": "^24.8.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
