now in phase with other groups

--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.1.5",
     "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "babel-jest": "^24.8.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
@@ -33,16 +34,16 @@
     "jest": "^24.8.0",
     "jest-css-modules": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.4",
-    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.1",
     "react-hot-loader": "^4.3.12",
-    "react-moment": "^0.9.2",
     "react-test-renderer": "^16.8.6",
     "resolve-url-loader": "^3.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
