--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,8 @@
     "jest": "^24.8.0",
     "jest-css-modules": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "moment": "^2.24.0",
+    "momentjs": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
