--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.6.1",
     "clsx": "latest",
     "date-fns": "^2.0.0-beta.5",
+    "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.24.0",
     "prop-types": "latest",
     "react": "^16.12.0",
@@ -16,7 +17,10 @@
     "react-scripts": "3.2.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
+    "react-virtualized": "^9.21.2"
   },
   "scripts": {
     "start": "react-scripts start",
